# ai-ethics-law-mini-project

./: PROCESS.md  README.md  pyproject.toml
notebooks/: analiza_licencji.ipynb
src/: license_scanner.py
src/scanner/: __init__.py  classifier.py  constants.py  explain.py  graph.py  parsers.py  pypi.py  reporting.py  visualization.py
wyniki/: ai-explaination.txt  graph.html  licenses.jsonl  licenses.txt  licenses_pnw.jsonl  pnw.html  pnw.txt
